# Virtio-gpu-for-RuxOS

./: .ccls  .clangd  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
config/: virtio_cfg_ruxos.json  zone1_ruxos_display.json  zone1_ruxos_display_imx8mp copy.json  zone1_ruxos_display_imx8mp.json  zone1_ruxos_hello.json
docs/: hvisor-tool的virtio实现解析.md  hvisor-tool的编译与调用链.md  hvisor框架下virtio设备的请求和响应链.md  hvisor的共享内存模型.md  ruxos的驱动模块解析.md  不同zone之间的内存关系.md
drm-example/: compile_cmd  drm-example  drm-example.c  framebuffer-example.c  image.rgb565
hvisor/: compile_cmd
hvisor-tool/: Makefile  compile_cmd
hvisor-tool/driver/: Makefile  hvisor.c
hvisor-tool/examples/qemu-aarch64/: virtio_cfg_ruxos.json  zone1_linux.json
hvisor-tool/include/: hvisor.h  zone_config.h
hvisor-tool/tools/: Makefile  event_monitor.c  ivc_demo.c  virtio.c  virtio_blk.c  virtio_console.c  virtio_gpu.c  virtio_gpu_async.c  virtio_gpu_base.c  virtio_gpu_gl.c  virtio_net.c
hvisor-tool/tools/include/: event_monitor.h  virtio.h  (+4 more)
hvisor/scripts/: qemu-aarch64.mk
hvisor/src/: event.rs
linux-drm-test/linux-drm-test/: Cargo.toml  compile_cmd
ruxos/: .gitmodules  Cargo.toml
ruxos/apps/display/basic_painting/: Cargo.toml  test_cmd
ruxos/apps/display/basic_painting/src/: display.rs  main.rs
scripts/: check_disk.sh  clean_up.sh  copy_out.sh  enter_rootfs.sh  enter_rootfs_sd.sh  mount.sh  mount_sd.sh  start_linux.sh  start_ruxos_display.sh  start_ruxos_display_imx8mp.sh  start_ruxos_hello.sh  umount.sh  umount_sd.sh
sdl-example/: Makefile  sdl-example.c
(+21 files in other folders)
